--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Git to use the token
       run: |
-        git config user.name "cresolindiateam"
-        git config user.email "nitesh@cresol.in"
+        git config user.name "BharatKumarNaik"
+        git config user.email "bharathegde2002@gmail.com"
         git remote set-url origin https://x-access-token:${{ secrets.CICD }}@github.com/cresolindiateam/cicddemo.git
     - name: Create and push to deployment branch
       run: |
